--- a/index.html
+++ b/index.html
@@ -138,34 +138,34 @@
   </div>
 
   <!-- Glassmorphism Card Content -->
-<div class="animated-border relative z-10 backdrop-blur-md bg-white/5 border border-white/10 rounded-xl p-6 sm:p-10 max-w-xl mx-auto shadow-lg hover:shadow-2xl transition-all duration-300">  <span class="inline-block mb-3 px-3 py-1 text-xs font-semibold uppercase tracking-wider text-crayTeal bg-white/10 border border-crayTeal/40 rounded-full">
-    Web Design Studio
-  </span>
+  <div class="animated-border relative z-10 backdrop-blur-md bg-white/5 border border-white/10 rounded-xl p-6 sm:p-10 max-w-xl mx-auto shadow-lg hover:shadow-2xl transition-all duration-300">
+    <span class="inline-block mb-3 px-3 py-1 text-xs font-semibold uppercase tracking-wider text-crayTeal bg-white/10 border border-crayTeal/40 rounded-full">
+      Web Design Studio
+    </span>
 
-  <!-- Main headline -->
-  <h1 class="text-4xl sm:text-5xl font-extrabold uppercase mb-4 leading-tight text-white" data-aos="fade-up">
-    Start simple. <span class="text-crayYellow">Grow bold.</span>
-  </h1>
+    <!-- Main headline -->
+    <h1 class="text-4xl sm:text-5xl font-extrabold uppercase mb-4 leading-tight text-white" data-aos="fade-up">
+      Websites That Help You <span class="text-crayYellow">Find, Track & Win</span> Clients
+    </h1>
 
-  <!-- Subheadline -->
-  <p class="text-base sm:text-lg text-gray-300 font-medium mb-6" data-aos="fade-up" data-aos-delay="100">
-    I help business owners turn ideas into bold, high-performing websites with modern design and clear function.
-  </p>
+    <!-- Subheadline -->
+    <p class="text-base sm:text-lg text-gray-300 font-medium mb-6" data-aos="fade-up" data-aos-delay="100">
+      Craytivo builds strategic websites for small and medium-sized businesses ready to grow.
+    </p>
 
-  <!-- CTA Button -->
-  <a href="#contact"
-     class="inline-block bg-crayTeal text-black font-semibold py-3 px-6 rounded-full shadow-lg hover:bg-opacity-90 hover:scale-105 active:scale-100 transition duration-300"
-     data-aos="zoom-in"
-     data-aos-delay="200">
-    Let’s Work Together
-  </a>
+    <!-- CTA Button -->
+    <a href="#contact"
+       class="inline-block bg-crayTeal text-black font-semibold py-3 px-6 rounded-full shadow-lg hover:bg-opacity-90 hover:scale-105 active:scale-100 transition duration-300"
+       data-aos="zoom-in"
+       data-aos-delay="200">
+      Get Started
+    </a>
 
-  <!-- Trust Signal -->
-  <p class="mt-5 text-sm text-gray-400" data-aos="fade-up" data-aos-delay="300">
-    Trusted by startups & SMEs 
-  </p>
-</div>
-
+    <!-- Target audience text -->
+    <p class="mt-5 text-sm text-gray-400" data-aos="fade-up" data-aos-delay="300">
+      For entrepreneurs, service providers & business owners ready to elevate their online presence.
+    </p>
+  </div>
 
   <!-- Scroll Down Prompt -->
   <div class="absolute bottom-4 animate-bounce z-10">
@@ -181,66 +181,82 @@
 
 
   <!-- About -->
-  <section id="about" class="py-16 px-6 max-w-5xl mx-auto" data-aos="fade-up">
-    <h2 class="text-3xl font-bold mb-6 text-crayYellow">About</h2>
-    <p class="text-gray-300">
-      Craytivo is a solo web studio focused on clear, conversion-driven design. I create fast, modern websites that connect with your audience and grow with your business. Whether you're launching a new brand or scaling an existing one, I build what you need.
-    </p>
-  </section>
+<section id="about" class="py-20 px-6 max-w-5xl mx-auto text-center" data-aos="fade-up">
+  <h2 class="text-3xl sm:text-4xl font-bold mb-6 text-crayYellow">About Craytivo</h2>
+  <p class="text-gray-300 text-lg mb-6 max-w-3xl mx-auto">
+    You don’t need just another website — you need a digital foundation that grows your business.
+    Craytivo builds clean, strategic websites that help entrepreneurs and business owners attract leads, build trust, and turn visitors into paying clients.
+  </p>
+  <div class="grid sm:grid-cols-3 gap-6 mt-10 text-left">
+    <div class="bg-[#1e1e1e] border border-crayTeal/30 p-6 rounded-lg shadow-lg">
+      <h3 class="text-crayTeal font-semibold mb-2 text-lg">Client-Centered Design</h3>
+      <p class="text-gray-400 text-sm">I design with your audience in mind — every section and scroll drives action.</p>
+    </div>
+    <div class="bg-[#1e1e1e] border border-crayYellow/30 p-6 rounded-lg shadow-lg">
+      <h3 class="text-crayYellow font-semibold mb-2 text-lg">Built for Growth</h3>
+      <p class="text-gray-400 text-sm">Your site will be scalable, fast, and mobile-first — ready to evolve with your business.</p>
+    </div>
+    <div class="bg-[#1e1e1e] border border-crayRed/30 p-6 rounded-lg shadow-lg">
+      <h3 class="text-crayRed font-semibold mb-2 text-lg">Strategic from Day One</h3>
+      <p class="text-gray-400 text-sm">From brand positioning to lead funnels, I build with purpose and results in mind.</p>
+    </div>
+  </div>
+</section>
 
-  <!-- Services -->
-<section id="services" class="py-24 px-6 bg-[#1e1e1e]" data-aos="fade-up">
+<!-- What You Get Section -->
+<section id="benefits" class="py-24 px-6 bg-[#1e1e1e]" data-aos="fade-up">
   <div class="max-w-6xl mx-auto text-center">
-    <h2 class="text-3xl sm:text-4xl font-bold text-crayYellow mb-12">What I Offer</h2>
+    <h2 class="text-3xl sm:text-4xl font-bold text-crayYellow mb-4">What You Get with Craytivo</h2>
+    <p class="text-gray-300 mb-12">Every website is crafted for growth, lead generation, and performance.</p>
 
-    <div class="grid md:grid-cols-3 gap-8">
-      <!-- Starter -->
-      <div class="bg-white/5 border border-crayTeal/30 rounded-2xl p-8 backdrop-blur-sm shadow-lg transition transform hover:-translate-y-1 hover:shadow-xl group" data-aos="fade-up">
-        <div class="flex justify-center items-center w-14 h-14 mb-4 mx-auto rounded-full bg-crayTeal/20">
+    <div class="grid gap-10 sm:grid-cols-2 lg:grid-cols-4">
+      <!-- Benefit 1 -->
+      <div class="flex flex-col items-center text-center bg-white/5 backdrop-blur-md p-6 rounded-xl border border-white/10 shadow-lg">
+        <div class="w-14 h-14 flex items-center justify-center bg-crayTeal/20 rounded-full mb-4">
           <svg class="w-6 h-6 text-crayTeal" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </div>
-        <h3 class="text-xl font-semibold mb-4 text-white">Starter Package</h3>
-        <ul class="text-gray-300 space-y-2 text-sm">
-          <li>✔️ 1-page responsive site</li>
-          <li>✔️ Custom branding integration</li>
-          <li>✔️ Contact form setup</li>
-        </ul>
+        <h3 class="text-white font-semibold text-lg mb-2">Mobile-First Design</h3>
+        <p class="text-gray-400 text-sm">Your site will look great on every screen, from phones to desktops.</p>
       </div>
 
-      <!-- Business -->
-      <div class="bg-white/5 border border-crayYellow/30 rounded-2xl p-8 backdrop-blur-sm shadow-lg transition transform hover:-translate-y-1 hover:shadow-xl group" data-aos="fade-up" data-aos-delay="100">
-        <div class="flex justify-center items-center w-14 h-14 mb-4 mx-auto rounded-full bg-crayYellow/20">
+      <!-- Benefit 2 -->
+      <div class="flex flex-col items-center text-center bg-white/5 backdrop-blur-md p-6 rounded-xl border border-white/10 shadow-lg">
+        <div class="w-14 h-14 flex items-center justify-center bg-crayYellow/20 rounded-full mb-4">
           <svg class="w-6 h-6 text-crayYellow" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3 7h18M3 12h18M3 17h18" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3 8h18M3 16h18" />
           </svg>
         </div>
-        <h3 class="text-xl font-semibold mb-4 text-white">Business Package</h3>
-        <ul class="text-gray-300 space-y-2 text-sm">
-          <li>✔️ Multi-page site</li>
-          <li>✔️ Service + contact pages</li>
-          <li>✔️ Performance optimization</li>
-        </ul>
+        <h3 class="text-white font-semibold text-lg mb-2">Lead Capture Tools</h3>
+        <p class="text-gray-400 text-sm">Built-in forms and follow-up systems to help you grow your client list.</p>
       </div>
 
-      <!-- Custom -->
-      <div class="bg-white/5 border border-crayRed/30 rounded-2xl p-8 backdrop-blur-sm shadow-lg transition transform hover:-translate-y-1 hover:shadow-xl group" data-aos="fade-up" data-aos-delay="200">
-        <div class="flex justify-center items-center w-14 h-14 mb-4 mx-auto rounded-full bg-crayRed/20">
+      <!-- Benefit 3 -->
+      <div class="flex flex-col items-center text-center bg-white/5 backdrop-blur-md p-6 rounded-xl border border-white/10 shadow-lg">
+        <div class="w-14 h-14 flex items-center justify-center bg-crayRed/20 rounded-full mb-4">
           <svg class="w-6 h-6 text-crayRed" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
           </svg>
         </div>
-        <h3 class="text-xl font-semibold mb-4 text-white">Custom Development</h3>
-        <ul class="text-gray-300 space-y-2 text-sm">
-          <li>✔️ Fully tailored web solutions</li>
-          <li>✔️ Interactive features & animations</li>
-          <li>✔️ Built to match your growth</li>
-        </ul>
+        <h3 class="text-white font-semibold text-lg mb-2">Optimized Performance</h3>
+        <p class="text-gray-400 text-sm">Fast loading and basic SEO to help customers find you online.</p>
+      </div>
+
+      <!-- Benefit 4 -->
+      <div class="flex flex-col items-center text-center bg-white/5 backdrop-blur-md p-6 rounded-xl border border-white/10 shadow-lg">
+        <div class="w-14 h-14 flex items-center justify-center bg-crayTeal/20 rounded-full mb-4">
+          <svg class="w-6 h-6 text-crayTeal" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h6m2 8H7a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v12a2 2 0 01-2 2z" />
+          </svg>
+        </div>
+        <h3 class="text-white font-semibold text-lg mb-2">CRM & Contact Systems</h3>
+        <p class="text-gray-400 text-sm">Let leads reach you and get a fast response—automatically.</p>
       </div>
     </div>
   </div>
 </section>
+
 
 
   <!-- Pricing -->
@@ -288,6 +304,43 @@
       </div>
     </div>
   </section>
+
+  <!-- 3-Step CTA Section -->
+<section id="cta-steps" class="relative py-24 px-6 bg-[#121212] overflow-hidden" data-aos="fade-up">
+  <div class="max-w-6xl mx-auto text-center">
+    <h2 class="text-3xl sm:text-4xl font-bold text-crayYellow mb-4">Get Your Website in 3 Easy Steps</h2>
+    <p class="text-gray-300 mb-12">No tech stress. Just results. Here's how it works:</p>
+
+    <div class="grid md:grid-cols-3 gap-10">
+      <!-- Step 1 -->
+      <div class="group relative bg-white/5 backdrop-blur-md p-8 rounded-2xl border border-crayTeal/30 shadow-xl hover:-translate-y-2 transition transform duration-300">
+        <div class="w-16 h-16 mx-auto mb-4 flex items-center justify-center bg-crayTeal/20 rounded-full border border-crayTeal/40 animate-pulse">
+          <span class="text-crayTeal text-xl font-bold">1</span>
+        </div>
+        <h3 class="text-xl font-semibold text-white mb-2">Book a Free Call</h3>
+        <p class="text-gray-400 text-sm">Tell me your vision. I’ll help you get clarity on your site’s direction.</p>
+      </div>
+
+      <!-- Step 2 -->
+      <div class="group relative bg-white/5 backdrop-blur-md p-8 rounded-2xl border border-crayYellow/30 shadow-xl hover:-translate-y-2 transition transform duration-300 delay-100">
+        <div class="w-16 h-16 mx-auto mb-4 flex items-center justify-center bg-crayYellow/20 rounded-full border border-crayYellow/40 animate-bounce">
+          <span class="text-crayYellow text-xl font-bold">2</span>
+        </div>
+        <h3 class="text-xl font-semibold text-white mb-2">Approve Your Design Plan</h3>
+        <p class="text-gray-400 text-sm">You’ll get a clear layout and visuals to review and approve before launch.</p>
+      </div>
+
+      <!-- Step 3 -->
+      <div class="group relative bg-white/5 backdrop-blur-md p-8 rounded-2xl border border-crayRed/30 shadow-xl hover:-translate-y-2 transition transform duration-300 delay-200">
+        <div class="w-16 h-16 mx-auto mb-4 flex items-center justify-center bg-crayRed/20 rounded-full border border-crayRed/40 animate-ping">
+          <span class="text-crayRed text-xl font-bold">3</span>
+        </div>
+        <h3 class="text-xl font-semibold text-white mb-2">Launch a Site That Converts</h3>
+        <p class="text-gray-400 text-sm">Go live with a site that works hard for you—24/7 lead generation, no stress.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Portfolio -->
   <section id="portfolio" class="py-24 px-6 bg-[#1e1e1e]" data-aos="fade-up">
