--- a/index.html
+++ b/index.html
@@ -452,55 +452,61 @@
     <p class="text-gray-300 mb-6">Websites I’ve helped build — from real estate to ecommerce to digital strategy.</p>
 
     <div class="grid sm:grid-cols-2 gap-8 mt-10 text-left">
-      <!-- Example Project -->
-      <div class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
-        <a href="assets\images\marina-homes.png" data-lightbox="portfolio" data-title="Marina Homes - Real Estate Website">
-          <img src="assets\images\marina-homes.png" alt="Marina Homes Screenshot" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
+      
+      <!-- Project 1 -->
+      <article class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
+        <a href="assets/images/marina-homes.png" data-lightbox="portfolio" data-title="Marina Homes - Real Estate Website">
+          <img src="assets/images/marina-homes.png" alt="Screenshot of Marina Homes website" loading="lazy" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
         </a>
         <h3 class="text-xl font-semibold text-white mb-1 group-hover:text-crayTeal">Marina Homes</h3>
         <p class="text-gray-400 text-sm">Luxury new home builder site showcasing real estate developments.</p>
         <a href="https://marinahomes.ca/" target="_blank" class="inline-block mt-3 text-crayTeal text-sm font-medium group-hover:underline">Visit Website →</a>
-      </div>
+      </article>
 
-      <!-- Repeat for other projects -->
-      <div class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
-        <a href="assets\images\purpose-path.png" data-lightbox="portfolio" data-title="Purpose Path - Marketing Agency">
-          <img src="assets\images\purpose-path.png" alt="Purpose Path Screenshot" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
+      <!-- Project 2 -->
+      <article class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
+        <a href="assets/images/purpose-path.png" data-lightbox="portfolio" data-title="Purpose Path - Marketing Agency">
+          <img src="assets/images/purpose-path.png" alt="Screenshot of Purpose Path website" loading="lazy" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
         </a>
         <h3 class="text-xl font-semibold text-white mb-1 group-hover:text-crayTeal">Purpose Path</h3>
         <p class="text-gray-400 text-sm">Marketing agency site built with strategy and growth in mind.</p>
         <a href="https://purposepath.ca/" target="_blank" class="inline-block mt-3 text-crayTeal text-sm font-medium group-hover:underline">Visit Website →</a>
-      </div>
+      </article>
 
-      <div class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
-        <a href="assets\images\zemlar.png" data-lightbox="portfolio" data-title="Zemlar Offices - Flexible Workspace">
-          <img src="assets\images\zemlar.png" alt="Zemlar Offices Screenshot" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
+      <!-- Project 3 -->
+      <article class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
+        <a href="assets/images/zemlar.png" data-lightbox="portfolio" data-title="Zemlar Offices - Flexible Workspace">
+          <img src="assets/images/zemlar.png" alt="Screenshot of Zemlar Offices website" loading="lazy" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
         </a>
         <h3 class="text-xl font-semibold text-white mb-1 group-hover:text-crayTeal">Zemlar Offices</h3>
         <p class="text-gray-400 text-sm">Professional site for B2B office space solutions across Canada.</p>
         <a href="https://zemlar.ca/" target="_blank" class="inline-block mt-3 text-crayTeal text-sm font-medium group-hover:underline">Visit Website →</a>
-      </div>
+      </article>
 
-      <div class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
-        <a href="assets\images\icare.png" data-lightbox="portfolio" data-title="ICARE Naturals - Skincare Ecommerce">
-          <img src="assets\images\icare.png" alt="ICARE Naturals Screenshot" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
+      <!-- Project 4 -->
+      <article class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
+        <a href="assets/images/icare.png" data-lightbox="portfolio" data-title="ICARE Naturals - Skincare Ecommerce">
+          <img src="assets/images/icare.png" alt="Screenshot of ICARE Naturals ecommerce site" loading="lazy" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
         </a>
         <h3 class="text-xl font-semibold text-white mb-1 group-hover:text-crayTeal">ICARE Naturals</h3>
         <p class="text-gray-400 text-sm">Clean, ecommerce-optimized design for a natural skincare brand.</p>
         <a href="https://icarenaturals.ca/" target="_blank" class="inline-block mt-3 text-crayTeal text-sm font-medium group-hover:underline">Visit Website →</a>
-      </div>
+      </article>
 
-      <div class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
-        <a href="assets\images\flc.png" data-lightbox="portfolio" data-title="Freedom Life Church - Ministry Website">
-          <img src="assets\images\flc.png" alt="Freedom Life Church Screenshot" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
+      <!-- Project 5 -->
+      <article class="relative bg-[#1a1a1a] border border-gray-700 p-6 rounded-xl hover:border-crayTeal transition duration-300 hover:shadow-2xl hover:-translate-y-1 transform hover:scale-105 group" data-aos="zoom-in">
+        <a href="assets/images/flc.png" data-lightbox="portfolio" data-title="Freedom Life Church - Ministry Website">
+          <img src="assets/images/flc.png" alt="Screenshot of Freedom Life Church website" loading="lazy" class="rounded-lg mb-4 shadow-md w-full h-48 object-cover group-hover:opacity-90 transition duration-300" />
         </a>
         <h3 class="text-xl font-semibold text-white mb-1 group-hover:text-crayTeal">Freedom Life Church</h3>
         <p class="text-gray-400 text-sm">Modern church website with events, giving, and media integration.</p>
         <a href="https://freedomlifechurch.ca/" target="_blank" class="inline-block mt-3 text-crayTeal text-sm font-medium group-hover:underline">Visit Website →</a>
-      </div>
+      </article>
+
     </div>
   </div>
 </section>
+
 
 
 
